# ai-accessibility-auto-fixer-v2

./: README.md  package.json  pyproject.toml
examples/: acceptance_criteria.json  test_artifact.json  test_case.md  updated_test_case.md
src/: analyzer.js  backends.js  models.js
src/qa_automator/: __init__.py  analyzer.py  backends.py  cli.py  models.py
tests/: analyzer.test.js  test_analyzer.py
