[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-automator-mm"
version = "0.1.0"
description = "Local-first multimodal QA analysis with Ollama and mock mode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
qa-automator = "qa_automator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
